created the game board

--- a/ML_projects/Reinforcement_Learning/tic_tac_toe with Q_learning.ipynb
+++ b/ML_projects/Reinforcement_Learning/tic_tac_toe with Q_learning.ipynb
@@ -32,32 +32,114 @@
    "id": "1e1b3690",
    "metadata": {},
    "source": [
-    "Creating a game board"
+    "Creating the game board"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 154,
    "id": "df33743c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Game at 0x2b12a2c1270>"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "root= tk.Tk()\n",
-    "root.geometry(\"300x300\")\n",
-    "root.title(\"Tic-Tac-Toe\")\n",
     "\n",
-    "label1= tk.Label(root, text=\"Player\")\n",
-    "label1.grid(row=0, column=0, padx=50, pady=5)\n",
-    "label2= tk.Label(root, text=\"Machine\")\n",
-    "label2.grid(row=0, column=1, padx=50, pady=5)\n",
+    "class Game():\n",
+    "    \"\"\"Main class for the game\"\"\"\n",
     "\n",
-    "root.mainloop()\n"
+    "    PLAYER_X= 1\n",
+    "    PLAYER_O= 2\n",
+    "    FONT_MAIN= (\"OCR A Extended\", 20)\n",
+    "    FONT_SCORE= (\"ROG Fonts\", 9)\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Innitialize game state\"\"\"\n",
+    "        self.current_player= 0\n",
+    "        self.player_symbols= \"XO\"\n",
+    "        self.root= None\n",
+    "        self.screen1()\n",
+    "\n",
+    "    def screen1(self):\n",
+    "        \"\"\"Player selection screen\"\"\"\n",
+    "        self.root= tk.Tk()\n",
+    "        self.root.title(\"Player's Choice\")\n",
+    "        self.root.geometry(\"300x200\")\n",
+    "\n",
+    "        tk.Label(self.root, text=\"Choose who you play as:\" ).grid(row= 0, column= 1, pady= 30)\n",
+    "\n",
+    "        self.selection_var= tk.IntVar()\n",
+    "\n",
+    "        tk.Radiobutton(text= \"Play as X ?\", variable= self.selection_var, value= self.PLAYER_X).grid(row= 1, column= 0)\n",
+    "\n",
+    "        tk.Radiobutton(text= \"play as O ?\", variable= self.selection_var, value= self.PLAYER_O).grid(row= 1, column= 2)\n",
+    "\n",
+    "        tk.Button(self.root, text= \"confirm\", command= self.start).grid(row= 2, column= 1)\n",
+    "\n",
+    "        self.root.mainloop()\n",
+    "\n",
+    "    def start(self):\n",
+    "        \"\"\"Handling player selection and launching game\"\"\"\n",
+    "        if self.selection_var.get() == self.PLAYER_O:\n",
+    "            self.player_symbols= 'OX'\n",
+    "        \n",
+    "        self.root.destroy()\n",
+    "        self.screen2()\n",
+    "\n",
+    "    def screen2(self):\n",
+    "        \"\"\"Main game screen\"\"\"\n",
+    "        self.root=tk.Tk()\n",
+    "        self.root.title(\"Tic-Tac-Toe\")\n",
+    "        self.root.geometry(\"300x300\")\n",
+    "\n",
+    "\n",
+    "        #Score labels\n",
+    "        tk.Label(self.root, text= f\"Player\\n(score)\", font=self.FONT_SCORE).grid(row= 0, column= 0)\n",
+    "\n",
+    "        tk.Label(self.root, text=f\"Machine\\n(score)\", font= self.FONT_SCORE).grid(row= 0, column= 2)\n",
+    "\n",
+    "\n",
+    "        #Grid configuration\n",
+    "        self.root.grid_columnconfigure((0,1,2), weight= 1)\n",
+    "        self.root.grid_rowconfigure((1,2,3), weight= 1)\n",
+    "        self.root.grid_rowconfigure(0, weight= 1)\n",
+    "        \n",
+    "        #Creating game board\n",
+    "        self.board= {}\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                btn= tk.Button(self.root, width= 3, text='', font=self.FONT_MAIN, command= lambda i= i, j= j: self.update(i, j))\n",
+    "\n",
+    "                btn.grid(row= i + 1, column= j, sticky= \"ewns\")\n",
+    "                self.board[(i,j)]= btn\n",
+    "        self.root.mainloop()\n",
+    "\n",
+    "    def update(self, i, j):\n",
+    "        \"\"\"Handle player moves\"\"\"\n",
+    "        if not self.board[(i,j)][\"text\"]:\n",
+    "            self.board[(i,j)][\"text\"]= self.player_symbols[self.current_player]\n",
+    "            self.current_player= 1 - self.current_player\n",
+    "\n",
+    "\n",
+    "#start the game\n",
+    "Game()\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adc3c9e1",
+   "id": "682cfa22",
    "metadata": {},
    "outputs": [],
    "source": []
