--- a/ML_projects/Reinforcement_Learning/tic_tac_toe with Q_learning.ipynb
+++ b/ML_projects/Reinforcement_Learning/tic_tac_toe with Q_learning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "56d4df6f",
    "metadata": {},
    "outputs": [],
@@ -37,10 +37,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "df33743c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Game at 0x238af441f30>"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "class Game():\n",
@@ -68,11 +79,11 @@
     "\n",
     "        self.selection_var= tk.IntVar()\n",
     "\n",
-    "        tk.Radiobutton(text= \"Play as X ?\", variable= self.selection_var, value= self.PLAYER_X).grid(row= 1, column= 0)\n",
+    "        tk.Radiobutton(text= \"Play as X ?\", variable= self.selection_var, value= self.PLAYER_X).grid(row= 1, column= 0, sticky= \"w\", pady= 10)\n",
     "\n",
-    "        tk.Radiobutton(text= \"play as O ?\", variable= self.selection_var, value= self.PLAYER_O).grid(row= 1, column= 2)\n",
+    "        tk.Radiobutton(text= \"Play as O ?\", variable= self.selection_var, value= self.PLAYER_O).grid(row= 1, column= 2, sticky= \"e\", pady= 10)\n",
     "\n",
-    "        tk.Button(self.root, text= \"confirm\", command= self.start).grid(row= 2, column= 1)\n",
+    "        tk.Button(self.root, text= \"Confirm\", command= self.start).grid(row= 2, column= 1, pady= 20)\n",
     "\n",
     "        self.root.mainloop()\n",
     "\n",
@@ -80,6 +91,7 @@
     "        \"\"\"Handling player selection and launching game\"\"\"\n",
     "        if self.selection_var.get() == self.PLAYER_O:\n",
     "            self.player_symbols= 'OX'\n",
+    "\n",
     "        \n",
     "        self.root.destroy()\n",
     "        self.screen2()\n",
@@ -117,7 +129,36 @@
     "        if not self.board[(i,j)][\"text\"]:\n",
     "            self.board[(i,j)][\"text\"]= self.player_symbols[self.current_player]\n",
     "            self.current_player= 1 - self.current_player\n",
+    "            win=self.win_check()\n",
+    "        if win is not None:\n",
+    "            for (i,j), button in self.board.items():\n",
+    "                if not self.board[(i,j)][\"text\"]:\n",
+    "                    button.config(state= tk.DISABLED)\n",
+    "            self.root1=tk.Toplevel()\n",
+    "            self.root1.title(\"Win Box\")\n",
+    "            self.root1.geometry(\"300x200\")\n",
+    "            if win[\"text\"]== self.player_symbols[0]:\n",
+    "                winner= \"You Won (～￣▽￣)～\"\n",
+    "            else:\n",
+    "                winner= \"Machine gets this one ＼（〇_ｏ）／\"\n",
     "\n",
+    "            tk.Label(self.root1, text=winner, font= (self.FONT_SCORE), ).grid(row=0, column=1, padx=10, pady=10, sticky= \"ewns\")\n",
+    "\n",
+    "                \n",
+    "    def win_check(self):\n",
+    "        for i in range(3):\n",
+    "            if self.board[(i,0)][\"text\"] == self.board[(i,1)][\"text\"] == self.board[(i,2)][\"text\"] != '':\n",
+    "                return self.board[(i,0)]\n",
+    "            if self.board[(0,i)][\"text\"] == self.board[(1,i)][\"text\"] == self.board[(2,i)][\"text\"] != '':\n",
+    "                return self.board[(0,i)]\n",
+    "        \n",
+    "        if self.board[(0,0)][\"text\"] == self.board[(1,1)][\"text\"] == self.board[(2,2)][\"text\"] != '':\n",
+    "            return self.board[(0,0)]\n",
+    "        \n",
+    "        if self.board[(0,2)][\"text\"] == self.board[(1,1)][\"text\"] == self.board[(2,0)][\"text\"] != '':\n",
+    "            return self.board[(0,2)]\n",
+    "            \n",
+    "        return None\n",
     "\n",
     "#start the game\n",
     "Game()\n",
@@ -127,8 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "682cfa22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'if self.selection_var.get() == self.PLAYER_O: Machine=self.PLAYER_X'"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"if self.selection_var.get() == self.PLAYER_O: Machine=self.PLAYER_X\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b405d2",
    "metadata": {},
    "outputs": [],
    "source": []
