adding the Maze Solver Program and fixing up some markdown issues

--- a/ML_projects/Supervised_learning_projects/Customer_churn.ipynb
+++ b/ML_projects/Supervised_learning_projects/Customer_churn.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "<h3>Creating a model for the customer churn in a bank with the help of Support Vector Machine Classifier <div> \n",
-    "&nbsp->Using Feature Scaling, Handling Imbalance data, Grid Search for Hyperparameter Tuning"
+    "&nbsp;->Using Feature Scaling, Handling Imbalance data, Grid Search for Hyperparameter Tuning"
    ]
   },
   {
@@ -4285,13 +4285,18 @@
     "As the data is imbalanced which is also true for multiple real world scenarios we have to preprocess data.\n",
     "<div>\n",
     "<h4>Working:</h4>\n",
-    "<div> &nbsp\n",
-    "1. Model is trained on the data after preprocessing and tuning it. \n",
-    "<div> &nbsp\n",
-    "2. We found out that oversampling has the best accuracy and highest recall which makes it the best for this model.\n",
-    "<div> &nbsp\n",
-    "3. The model's effectiveness is evaluated for each data scenario using classification reports to identify the best approach for predicting customer churn.\n"
+    "<div> \n",
+    "&nbsp;1. Model is trained on the data after preprocessing and tuning it. \n",
+    "<div> \n",
+    "&nbsp;2. We found out that oversampling has the best accuracy and highest recall which makes it the best for this model.\n",
+    "<div> \n",
+    "&nbsp;3. The model's effectiveness is evaluated for each data scenario using classification reports to identify the best approach for predicting customer churn.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
