--- a/ML_projects/Supervised_learning_projects/Customer_churn.ipynb
+++ b/ML_projects/Supervised_learning_projects/Customer_churn.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Creating a model for the customer churn in a bank with the help of Support Vector Machine Classifier <div> \n",
-    "&nbsp;->Using Feature Scaling, Handling Imbalance data, Grid Search for Hyperparameter Tuning"
+    "<h3>Creating a model for the customer churn in a bank with the help of Support Vector Machine Classifier <div>  \n",
+    "->Using Feature Scaling, Handling Imbalance data, Grid Search for Hyperparameter Tuning"
    ]
   },
   {
@@ -4284,19 +4284,14 @@
     "This program aims to build a model using Support Vector Machine to predict customer churn, which means whether a customer will leave or not based on the data given.\n",
     "As the data is imbalanced which is also true for multiple real world scenarios we have to preprocess data.\n",
     "<div>\n",
-    "<h4>Working:</h4>\n",
-    "<div> \n",
-    "&nbsp;1. Model is trained on the data after preprocessing and tuning it. \n",
-    "<div> \n",
-    "&nbsp;2. We found out that oversampling has the best accuracy and highest recall which makes it the best for this model.\n",
-    "<div> \n",
-    "&nbsp;3. The model's effectiveness is evaluated for each data scenario using classification reports to identify the best approach for predicting customer churn.\n"
+    "<h4>Working:</h4>  \n",
+    "\n",
+    "1. Model is trained on the data after preprocessing and tuning it.  \n",
+    "\n",
+    "2. We found out that oversampling has the best accuracy and highest recall which makes it the best for this model.  \n",
+    "\n",
+    "3. The model's effectiveness is evaluated for each data scenario using classification reports to identify the best approach for predicting customer churn.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
