--- a/ML_projects/Reinforcement_Learning/Maze Solver using Q-learning.ipynb
+++ b/ML_projects/Reinforcement_Learning/Maze Solver using Q-learning.ipynb
@@ -21,7 +21,7 @@
    "id": "9fba9da1",
    "metadata": {},
    "source": [
-    "![alt text](<Maze Pic.png>)"
+    "![alt text](<Maze_Pic-1.png>)"
    ]
   },
   {
