made a new project while completing the game of tic-tac-toe working on the agent

--- a/ML_projects/Reinforcement_Learning/tic_tac_toe with Q_learning.ipynb
+++ b/ML_projects/Reinforcement_Learning/tic_tac_toe with Q_learning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 99,
    "id": "56d4df6f",
    "metadata": {},
    "outputs": [],
@@ -32,22 +32,22 @@
    "id": "1e1b3690",
    "metadata": {},
    "source": [
-    "Creating the game board"
+    "Creating the game logic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "df33743c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Game at 0x238af441f30>"
+       "<__main__.Game at 0x2530d3e0e80>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,8 +59,8 @@
     "\n",
     "    PLAYER_X= 1\n",
     "    PLAYER_O= 2\n",
-    "    FONT_MAIN= (\"OCR A Extended\", 20)\n",
-    "    FONT_SCORE= (\"ROG Fonts\", 9)\n",
+    "    SCORE_PL=0\n",
+    "    SCORE_MC=0\n",
     "\n",
     "    def __init__(self):\n",
     "        \"\"\"Innitialize game state\"\"\"\n",
@@ -104,9 +104,13 @@
     "\n",
     "\n",
     "        #Score labels\n",
-    "        tk.Label(self.root, text= f\"Player\\n(score)\", font=self.FONT_SCORE).grid(row= 0, column= 0)\n",
     "\n",
-    "        tk.Label(self.root, text=f\"Machine\\n(score)\", font= self.FONT_SCORE).grid(row= 0, column= 2)\n",
+    "        self.score_pl= tk.StringVar(value= f\"Player\\n{self.SCORE_PL}\")\n",
+    "        self.score_mc= tk.StringVar(value= f\"Machine\\n{self.SCORE_MC}\")\n",
+    "\n",
+    "        tk.Label(self.root, textvariable= self.score_pl, font= (\"ROG Fonts\", 9)).grid(row= 0, column= 0)\n",
+    "\n",
+    "        tk.Label(self.root, textvariable=self.score_mc, font= (\"ROG Fonts\", 9)).grid(row= 0, column= 2)\n",
     "\n",
     "\n",
     "        #Grid configuration\n",
@@ -118,7 +122,7 @@
     "        self.board= {}\n",
     "        for i in range(3):\n",
     "            for j in range(3):\n",
-    "                btn= tk.Button(self.root, width= 3, text='', font=self.FONT_MAIN, command= lambda i= i, j= j: self.update(i, j))\n",
+    "                btn= tk.Button(self.root, width= 3, text='', font=(\"OCR A Extended\", 20), command= lambda i= i, j= j: self.update(i, j))\n",
     "\n",
     "                btn.grid(row= i + 1, column= j, sticky= \"ewns\")\n",
     "                self.board[(i,j)]= btn\n",
@@ -136,13 +140,35 @@
     "                    button.config(state= tk.DISABLED)\n",
     "            self.root1=tk.Toplevel()\n",
     "            self.root1.title(\"Win Box\")\n",
-    "            self.root1.geometry(\"300x200\")\n",
+    "            self.root1.geometry(\"400x200\")\n",
     "            if win[\"text\"]== self.player_symbols[0]:\n",
     "                winner= \"You Won (～￣▽￣)～\"\n",
+    "                self.SCORE_PL+=1\n",
+    "                self.score_pl.set(f\"Player\\n{self.SCORE_PL}\")\n",
     "            else:\n",
     "                winner= \"Machine gets this one ＼（〇_ｏ）／\"\n",
+    "                self.SCORE_MC+=1\n",
+    "                self.score_mc.set(f\"Machine\\n{self.SCORE_MC}\")\n",
     "\n",
-    "            tk.Label(self.root1, text=winner, font= (self.FONT_SCORE), ).grid(row=0, column=1, padx=10, pady=10, sticky= \"ewns\")\n",
+    "            tk.Label(self.root1, text=winner, font=(\"ROG Fonts\", 12)).grid(row=0, column=0, columnspan=3, sticky=\"ewns\")\n",
+    "            self.root1.grid_rowconfigure(0, weight=1)\n",
+    "            self.root1.grid_columnconfigure((0,1,2), weight=1)\n",
+    "\n",
+    "            #if Player continues\n",
+    "            def play_again():\n",
+    "                self.root1.destroy()\n",
+    "                for (i,j), button in self.board.items():\n",
+    "                    if not self.board[(i,j)][\"text\"]:\n",
+    "                        button.config(state= tk.NORMAL)\n",
+    "                    self.board[(i,j)][\"text\"]=''\n",
+    "\n",
+    "            tk.Button(self.root1, text= \"Play Again\", command= play_again).grid(row=1, column= 0, padx=30, pady=30, sticky=\"w\")\n",
+    "\n",
+    "            def exit():\n",
+    "                self.root1.destroy()\n",
+    "                self.root.destroy()\n",
+    "\n",
+    "            tk.Button(self.root1, text=\"Exit\", command= exit).grid(row=1, column=2, padx=30, pady=30, sticky=\"e\")\n",
     "\n",
     "                \n",
     "    def win_check(self):\n",
@@ -167,24 +193,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e82d350",
+   "metadata": {},
+   "source": [
+    "To Be Implemented: Creating and training agent for the game"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 101,
    "id": "682cfa22",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'if self.selection_var.get() == self.PLAYER_O: Machine=self.PLAYER_X'"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"if self.selection_var.get() == self.PLAYER_O: Machine=self.PLAYER_X\""
+    "class agent(Game):\n",
+    "    \"if self.selection_var.get() == self.PLAYER_O: Machine=self.PLAYER_X\"\n",
+    "    "
    ]
   },
   {
